# swarm-soc-noetic

./: .gitignore  Dockerfile  README.md  docker.sh
noetic_ws/src/noetic_tutorials/: CMakeLists.txt  package.xml
noetic_ws/src/noetic_tutorials/scripts/: autopose.py  client.py  convertor.py  listener.py  navigator.py  server.py  speaker.py
noetic_ws/src/noetic_tutorials/srv/: Fibonacci.srv
noetic_ws/src/noetic_tuts/: CMakeLists.txt  package.xml
noetic_ws/src/noetic_tuts/scripts/: autopose.py  convertor.py  listener.py  navigator.py  speaker.py
