<?xml version="1.0"?>
<package format="2">
  <name>noetic_tutorials</name>
  <version>0.0.0</version>
  <description>noetic_tutorials</description>

  <maintainer email="pranavgupta.53535@gmail.com">pranavgupta2003</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/</url>
  <author email="pranavgupta.53535@gmail.com">Pranav Gupta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
